@@ -1,3 +1,8 @@
+2003-04-17  Paolo Carlini  <pcarlini@unitus.it>
+
+	* include/std/std_streambuf.h (setp): _M_out_lim, being
+	the end limit of used put area, is set equal to _M_out_beg.
+
 2003-04-16  Benjamin Kosnik  <bkoz@redhat.com>
 
 	* acinclude.m4 (GLIBCPP_CHECK_PCH): New.
